<resources>
    <string name="app_name" translatable="false">JamDroidFirechat</string>
    <string name="action_settings">Settings</string>
    <string name="chat_global">Global</string>

    <string name="json_push_notification" translatable="false">{\'include_player_ids\': [\'%1$s\'], \'headings\': {\'en\':\'%2$s\'}, \'contents\': {\'en\':\'%3$s\'}, \'android_accent_color\': \'FF4081\', \'android_group\': \'chat_msg\', \'data\': %4$s}</string>

    <!-- Google Auth Strings -->
    <string name="google_error_auth_with_google">"Error on authentication with Google: "</string>
    <string name="google_error_network_error">"Erro de rede: "</string>
    <string name="google_error_recoverable_oauth_error">Recoverable Google OAuth error: </string>

    <!-- Dialogs and Progress Dialogs -->
    <string name="authenticating_with_facebook">Authenticating with Facebook…</string>
    <string name="authenticating_with_google">Authenticating with Google…</string>
    <string name="progress_dialog_loading" type="id">Loading..</string>
    <string name="progress_dialog_authenticating_with">Authenticating with %s</string>

    <string name="dialog_title_delete_account">Do you want to delete your account?</string>
    <string name="dialog_title_logout">Do you want to logout?</string>
    <string name="dialog_title_revoke_access">Do you want to revoke access?</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>

    <!-- OAuth Format -->
    <string name="oauth2_format" translatable="false">oauth2:%s</string>

    <!-- Errors -->
    <string name="error_message_failed_sign_in_no_network">Error trying to connect, check your connection.</string>

    <!-- Log Messages -->
    <string name="log_message_auth_successful">Auth successful.</string>
    <string name="log_error_invalid_provider">Invalid provider: </string>
    <string name="button_send">Send</string>
    <string name="notice_insert_message">Enter a message</string>

    <!-- Base Error Strings-->
    <string name="log_error_occurred">"An error has occurred: "</string>
    <string name="hint_write_here">Write here…</string>
    <string name="action_exit">Logout</string>
    <string name="action_revoke_access">Revoke Access</string>
    <string name="app_firechat" translatable="false">FireChat</string>
    <string name="app_jamdroid" translatable="false">JamDroid</string>

    <!-- Preferences Strings-->
    <string name="pref_delete_account">Delete account</string>
    <string name="pref_notification" translatable="false">Notification</string>
    <string name="pref_version">Version</string>
    <string name="pref_github" translatable="false">Github</string>
    <!-- Preferences Keys -->
    <string name="pref_key_notification" translatable="false">PREF_KEY_NOTIFICATION</string>
    <string name="pref_key_github" translatable="false">PREF_KEY_GITHUB</string>
    <string name="pref_key_about" translatable="false">PREF_KEY_ABOUT</string>
    <string name="pref_key_revoke_access" translatable="false">PREF_KEY_REVOKE_ACCESS</string>
    <string name="pref_key_delete_account" translatable="false">PREF_KEY_DELETE_ACCOUNT</string>
    <string name="pref_key_exit" translatable="false">PREF_KEY_EXIT</string>

    <!-- Messages Strings -->
    <string name="msg_account_deleted">Account deleted!</string>
    <string name="msg_notification_status_changed">Notification %s!</string>
    <string name="msg_notification_status_active">activated</string>
    <string name="msg_notification_status_disable">disabled</string>
    <string name="dialog_title_licenses">Licenses</string>
    <string name="dialog_title_new_message">New Message</string>
    <string name="dialog_msg_user_says">%1$s, says: %2$s</string>
    <string name="progress_dialog_uploading">Sending image…</string>
    <string name="msg_permission_required">You must give permission for this action</string>
    <string name="dialog_title_select_image">Choose an image…</string>
    <string name="msg_info_send_success">Sent with success!</string>
    <string name="msg_info_send_failed">There was a problem sending!</string>
    <string name="action_invite">Invite</string>
    <string name="action_search">Search</string>
    <string name="invitation_title">Share JamdroidFirechat</string>
    <string name="invitation_message">Hello, come the JamdroidFirechat a realtime chat app and the coolest is opensource.</string>
    <string name="invitation_call_action">Access</string>
    <string name="action_attach">Media</string>
    <string name="menu_action_location">Location</string>
    <string name="menu_action_gallery">Gallery</string>
    <string name="menu_action_camera">Camera</string>

    <string name="map_static_url" translatable="false"><![CDATA[http://maps.google.com/maps/api/staticmap?markers=%1$s,%2$s&zoom=15&size=360x360&scale=2]]></string>
    <string name="map_location_intent" translatable="false">geo:%1$s,%2$s?q=%3$s,%4$s</string>
    <string name="notification_msg_image">Sent you a new image</string>
    <string name="notification_msg_location">Sent you a location</string>

    <plurals name="not_new_message">
        <item quantity="one">%d nova mensagem:</item>
        <item quantity="other">%d novas mensagens:</item>
    </plurals>

    <string name="content_description_app_icon" translatable="false">App Icon</string>


    <string name="transition_name_user_photo" translatable="false">img_user_photo</string>
    <string name="transition_name_user_name" translatable="false">img_user_name</string>
    <string name="transition_name_message_image" translatable="false">message_image</string>

    <string name="authenticating">Authenticating…</string>
    <string name="dialog_message_delete_note">Note: this action will delete message for all users</string>
    <string name="dialog_message_delete_title">Do you want delete this message?</string>
    <string name="hint_select_an_image">Select an image…</string>
    <string name="notification_new_notification">You received a notification</string>
    <string name="title_select_an_user">Select an User</string>

</resources>
