<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:fragment="com.ygorcesar.jamdroidfirechat.view.activity.PrefsActivity">

    <SwitchPreference
        android:icon="@drawable/ic_message_notification_blue"
        android:key="@string/pref_key_notification"
        android:title="@string/pref_notification"/>

    <Preference
        android:icon="@drawable/ic_github_blue"
        android:key="@string/pref_key_github"
        android:title="@string/pref_github"/>

    <Preference
        android:icon="@drawable/ic_info_blue"
        android:key="@string/pref_key_about"
        android:title="@string/pref_version"/>

    <Preference
        android:icon="@drawable/ic_revoke_access_blue"
        android:key="@string/pref_key_revoke_access"
        android:title="@string/action_revoke_access"/>

    <Preference
        android:icon="@drawable/ic_delete_account_blue"
        android:key="@string/pref_key_delete_account"
        android:title="@string/pref_delete_account"/>

    <Preference
        android:icon="@drawable/ic_logout_blue"
        android:key="@string/pref_key_exit"
        android:title="@string/action_exit"/>

</PreferenceScreen>