<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".view.activity.MainActivity">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="collapseActionView|always"/>

    <item
        android:id="@+id/action_attach"
        android:icon="@drawable/ic_attach"
        android:title="@string/action_attach"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_invite"
        android:icon="@drawable/ic_share"
        android:title="@string/action_invite"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
</menu>
