<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.ygorcesar.jamdroidfirechat.ui.login.LoginViewModel"/>

        <import type="android.view.View"/>
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_gradient_primary"
        android:gravity="center|top"
        tools:context=".ui.login.LoginActivity">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/content_description_app_icon"
            android:src="@drawable/jamdroidfirechat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/app_jamdroid"
            android:textColor="@color/white"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/app_firechat"
            android:textColor="@color/white"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView"/>


        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_google"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:enabled="@{!viewmodel.inProgress}"
            app:layout_constraintBottom_toTopOf="@+id/sign_in_facebook"
            app:layout_constraintEnd_toEndOf="@+id/sign_in_facebook"
            app:layout_constraintStart_toStartOf="@+id/sign_in_facebook"/>

        <com.facebook.login.widget.LoginButton
            android:id="@+id/sign_in_facebook"
            android:layout_width="0dp"
            android:visibility="invisible"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:enabled="@{!viewmodel.inProgress}"
            android:paddingBottom="14dp"
            android:paddingTop="14dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <ProgressBar
            android:id="@+id/progress_login"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:indeterminate="true"
            android:indeterminateTint="@color/white"
            android:visibility="@{viewmodel.inProgress ? View.VISIBLE : View.INVISIBLE}"
            app:layout_constraintBottom_toTopOf="@+id/sign_in_google"
            app:layout_constraintEnd_toEndOf="@+id/sign_in_google"
            app:layout_constraintStart_toStartOf="@+id/sign_in_google"
            tools:visibility="visible"/>

        <TextView
            android:id="@+id/tv_login_state"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@{viewmodel.authProvideString}"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:visibility="@{viewmodel.inProgress ? View.VISIBLE : View.INVISIBLE}"
            app:layout_constraintBottom_toTopOf="@+id/progress_login"
            app:layout_constraintEnd_toEndOf="@+id/progress_login"
            app:layout_constraintStart_toStartOf="@+id/progress_login"
            tools:text="Login com facebook"
            tools:visibility="visible"/>


    </android.support.constraint.ConstraintLayout>
</layout>