<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="messageViewModel"
            type="com.ygorcesar.jamdroidfirechat.viewmodel.MessageFragmViewModel"/>
    </data>

    <com.flipboard.bottomsheet.BottomSheetLayout
        android:id="@+id/bottomsheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:background="@drawable/gdg_logo"
                tools:context=".view.fragment.MessagesFragment">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_message"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_above="@+id/rv_message_container"
                    tools:listitem="@layout/adapter_item_message"/>

                <RelativeLayout
                    android:id="@+id/rv_message_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="@dimen/edt_msg_content_margin"
                    android:layout_marginLeft="@dimen/edt_msg_content_margin"
                    android:layout_marginStart="@dimen/edt_msg_content_margin"
                    android:layout_toLeftOf="@+id/btn_send_message"
                    android:layout_toStartOf="@+id/btn_send_message"
                    android:background="@drawable/message_item_background"
                    android:elevation="4dp"
                    android:paddingBottom="@dimen/edt_msg_content_padding_v"
                    android:paddingLeft="@dimen/edt_msg_content_padding_h"
                    android:paddingRight="@dimen/edt_msg_content_padding_h"
                    android:paddingTop="@dimen/edt_msg_content_padding_v">

                    <ImageView
                        android:id="@+id/iv_emoji"
                        android:layout_width="@dimen/edt_ic_size"
                        android:layout_height="@dimen/edt_ic_size"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:padding="4dp"
                        android:src="@drawable/ic_insert_emoticon"
                        android:tint="@color/colorSecondaryIcon"/>

                    <hani.momanii.supernova_emoji_library.Helper.EmojiconEditText
                        android:id="@+id/edt_message_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toLeftOf="@+id/iv_camera"
                        android:layout_toStartOf="@+id/iv_camera"
                        android:background="#00ffffff"
                        android:hint="@string/hint_write_here"
                        android:inputType="textMultiLine|textCapSentences"
                        android:lines="2"
                        android:maxLines="3"
                        android:layout_toRightOf="@+id/iv_emoji"
                        android:layout_toEndOf="@+id/iv_emoji"/>

                    <ImageView
                        android:id="@+id/iv_camera"
                        android:layout_width="@dimen/edt_ic_size"
                        android:layout_height="@dimen/edt_ic_size"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:onClick="@{messageViewModel::onClick}"
                        android:padding="4dp"
                        android:src="@drawable/ic_camera"
                        android:tint="@color/colorSecondaryIcon"/>

                </RelativeLayout>


                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/btn_send_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="bottom|end"
                    android:layout_margin="@dimen/fab_send_margin"
                    android:onClick="@{messageViewModel::onClick}"
                    android:src="@drawable/ic_send"
                    android:text="@string/button_send"
                    app:pressedTranslationZ="10dp"/>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/ln_menu_items"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#f0ffffff"
                    android:orientation="horizontal"
                    android:padding="14dp"
                    android:visibility="invisible"
                    tools:visibility="visible">

                    <LinearLayout
                        android:id="@+id/ln_menu_item_camera"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:onClick="@{messageViewModel::onClick}"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/rounded_menu_icon"
                            android:layout_height="@dimen/rounded_menu_icon"
                            android:background="@drawable/bg_rounded_shape"
                            android:src="@drawable/ic_camera"
                            android:tint="@color/white"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="6dp"
                            android:text="@string/menu_action_camera"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ln_menu_item_gallery"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:onClick="@{messageViewModel::onClick}"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/rounded_menu_icon"
                            android:layout_height="@dimen/rounded_menu_icon"
                            android:background="@drawable/bg_rounded_shape"
                            android:src="@drawable/ic_image_placeholder"
                            android:tint="@color/white"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="6dp"
                            android:text="@string/menu_action_gallery"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ln_menu_item_location"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:onClick="@{messageViewModel::onClick}"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/rounded_menu_icon"
                            android:layout_height="@dimen/rounded_menu_icon"
                            android:background="@drawable/bg_rounded_shape"
                            android:src="@drawable/ic_location"
                            android:tint="@color/white"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="6dp"
                            android:text="@string/menu_action_location"/>
                    </LinearLayout>
                </LinearLayout>

                <FrameLayout
                    android:id="@+id/fl_container_to_hide"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>

        </FrameLayout>
    </com.flipboard.bottomsheet.BottomSheetLayout>
</layout>